name: pdfkiths
-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis: Quartz PDFKit haskell bindings
-- A longer description of the package.
-- description:         
homepage: http://www.github.com/aktowns/pdfkiths
license: MIT
license-file: LICENSE
author: Ashley Towns
maintainer: ashleyis@me.com
-- A copyright notice.
-- copyright:           
category: Graphics
build-type: Simple
extra-source-files: Readme.md
cabal-version: >=1.10

source-repository head
  type: git
  location: git://git@github.com/aktowns/pdfkiths.git

library
  exposed-modules: 
    Cocoa.PdfKit Cocoa.NSArray Cocoa.NSData Cocoa.NSURL Cocoa.NSString Cocoa.NSObject Swizzle
  --  other-modules: 
  other-extensions: ForeignFunctionInterface OverloadedStrings
  frameworks: Cocoa Foundation CoreFoundation AppKit Quartz
  ghc-options: -Wall
  extra-libraries: objc
  build-depends: base >=4.6 && <4.7  
  default-language: Haskell2010
  cc-options: -Wno-int-to-pointer-cast -Wno-pointer-to-int-cast
  c-sources: cfiles/objch.c
  includes: cfiles/objch.h

executable testannotations
  main-is: examples/testannotations.hs
  ghc-options: -Wall -threaded
  build-depends: base >=4.6 && <4.7, pdfkiths
  cc-options: -Wall
  default-language: Haskell2010

executable testswizzle
  main-is: examples/testswizzle.hs
  ghc-options: -Wall -threaded
  build-depends: base >=4.6 && <4.7, pdfkiths
  cc-options: -Wall
  default-language: Haskell2010
